# P-RSoXR

./: .gitignore  .readthedocs.yaml  Anisotropic_Refnx.ipynb  Anisotropic_refnx_template.ipynb  LICENSE  PyATMM_Reflectivity_Workbook.ipynb  README.md  Thelen_250eV.txt  readthedocs.yaml  requirements.txt  setup.cfg
EMpy/examples/: ReflectP.csv  ReflectS.csv  ex_transfer_matrix.py  qVals.csv
OutDated_Progress_2020/: Anisotropic_refnx_template.ipynb  Thelen_250eV_ppol.txt  Thelen_250eV_spol.txt
OutDated_Progress_2020/EMpy/: P_RSOXR_ReadME.txt
OutDated_Progress_2020/Old_workbooks/: EMpy_Reflectivity_Workbook.ipynb
Will_be_deleted/PyPXR/: Feb19_Exp101_p190.txt  anisotropic_reflectivity.py
Will_be_deleted/ani_reflect/: README.md
Will_be_deleted/docs/: index.rst
ani_reflect/: Logp_constraints.py  README.md  _ani_reflect.py  _biaxial_reflect.py  _uniaxial_reflect.py  ani_NEXAFSload.py  ani_reflect_model.py  ani_structure.py  data_processing.py  utilities.py  version.py
ani_reflect/NEXAFS_Loader/: NEXAFS_series.py
ani_refnx/: README.md  ani_reflect_model.py  ani_structure.py
docs/: conf.py  environment.yaml  requirements.txt
docs/source/: DataModeling_home.rst  DataReduction_API.rst  Installation.rst  PyPXR_API.rst
old_files/DataReduction/: ALS11012_prsoxr_loader.py  ALS11012_prsoxr_reduction.py  Process_pRSOXR_Data_03192021.ipynb  Process_pRSOXR_Data_CSV_06192021.ipynb  Untitled.ipynb
old_files/PyPXR/: anisotropic_structure.py  storage.py  version.py
old_files/ani_reflect/: _uniaxial_reflect.py  ani_reflect_model.py  ani_structure.py  utilities.py  (+1 more)
(+586 files in other folders)
