[metadata]
name = PyPXR
version = 0.0.1
author = Thomas Ferron
author_email = thomas.ferron@nist.gov
description = A collection of utilities for reducing data and modeling Polarized Resonant Soft X-ray Reflectivity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomFerron/PyPXR
project_urls = 
	Github = https://github.com/TomFerron/PyPXR
	Documentation = http://github.com/dsunday/P-RSoXR
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Science/Research
	License :: Freely Distributable
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Physics
	
[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy
	scipy
	pandas
	periodictable
	matplotlib
	refnx	

[options.packages.find]
where = src